<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/teams"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.SpurFlys.pocketscout.TeamSelection"
    android:id="@+id/">

    <EditText
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/team_number"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="findTeam"
        android:text="@string/search_team"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/team"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/auton"
        android:inputType="textMultiLine"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/chassis"
        android:inputType="textMultiLine"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/arm"
        android:inputType="textMultiLine"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/intake"
        android:inputType="textMultiLine"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/other"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="addTeam"
        android:text="@string/add_team" />

    <requestFocus
        android:layout_alignTop="@+id/team"
        android:layout_alignLeft="@+id/team"
        android:layout_alignStart="@+id/team" />

    <requestFocus
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="851dp"
        android:layout_marginStart="851dp" />

</RelativeLayout>